# Lex-compiler

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  README_IT.md  RELEASE_NOTES.md  TODO.md  install.ps1  install.sh  lex-documentation.md  progress.md  vcpkg.json
.github/workflows/: ci.yml  codeql.yml  deploy-web.yml  release.yml
.planning/: STATE.md
.planning/archive/: ROADMAP.md  progress.md  progress.md.backup
docs/: API_REFERENCE.md  AUDIT_REPORT.md  BACKENDS.md  ERROR_CODES.md  INTEGRATION_GODOT.md  INTEGRATION_LOVE2D.md  INTEGRATION_UNITY.md  LEX_AI_INTEGRATION.md  LEX_ARCHITECTURE.md  LEX_CHANGELOG.md  LEX_ECOSYSTEM_INTEGRATION.md  LEX_KEYWORDS_EN_IT.md  LEX_SPECIFICATION.md  LEX_VISION.md  LICENSING.md  README.md  ROADMAP.md  TIERS.md  TUTORIAL.md  aether-documentation.md  index.html  lexc.1
docs/assets/: index-AbMSQQG7.css  index-B5ar-IJu.css  index-B7oM0bxn.js  index-B9w13AOT.js  index-BVmkJIMU.js  index-BaC4FOpS.js  index-Bamr0QZM.js  index-BbYe7-Fw.css  index-BloY1_4j.css  index-BpABQxwg.js  index-C-QrafMF.js  index-CIkSF6_h.css  index-CzvJmfGW.css  index-D1qmNBM6.css  index-DNYKBdoX.css  index-DoXXIv6_.js  index-DxqfN9__.js  index-SxiF3E1s.js  index-dQ0_lLvc.css  vendor-markdown-hxljWns-.js  vendor-motion-Bp28Qwvt.js  vendor-prism-Cnder-hW.js  vendor-react-BlDr41-a.js
docs/examples/: advanced_structure.lex  basic_structure.lex  era_definition.lex
docs/public/en/: index.md
docs/public/en/architecture/: layers.md
docs/public/en/spec/: language.md  outputs.md  validation.md
docs/public/it/: index.md
docs/public/it/architecture/: layers.md
docs/public/it/spec/: language.md  outputs.md  validation.md
editors/vscode/: language-configuration.json  package.json
editors/vscode/snippets/: lex.json
editors/vscode/syntaxes/: lex.tmLanguage.json
examples/: imperium_minimal.lex  protocol.lex  test_conditions.lex  test_schema.lex  test_visibility.lex
examples/godot_demo/: README.md  game_data.gd  main.gd  main.tscn  project.godot  rpg_data.gd  rpg_data.lex
examples/output/: imperium_minimal.json  imperium_minimal.lua
src/: main.cpp
src/ast/: ast.cpp  ast.h
src/cli/: color.hpp  commands.hpp  compiler.hpp  main.cpp  spinner.hpp  watcher.hpp
src/codegen/: backend.h  backend_registry.cpp  defold_backend.cpp  defold_backend.h  godot_backend.cpp  godot_backend.h  json_backend.cpp  json_backend.h  love2d_backend.cpp  love2d_backend.h  lua_backend.cpp  lua_backend.h  rpc_backend.cpp  rpc_backend.hpp  unity_backend.cpp  unity_backend.h
src/compiler/: pass.cpp  pass.hpp  pipeline.cpp  pipeline.hpp
src/context/: context.hpp  context_generator.cpp  query.cpp  query.hpp
src/lex/: lex.cpp  lex.hpp  version.h
src/lexer/: keywords.h  lexer.cpp  lexer.h  token.h
src/license/: license.cpp  license.hpp
src/parser/: parser.cpp  parser.h  validator.cpp  validator.h
src/schema/: schema.cpp  schema.h
src/semantic/: type_checker.cpp
tests/: CMakeLists.txt  lua_simulator.lua  lua_validator.py  test_main.cpp
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: CodeBlock.tsx  CodeTransformer.tsx  Footer.tsx  Navbar.tsx
web/src/components/home/: Backends.tsx  CTA.tsx  FAQ.tsx  Features.tsx  Hero.tsx  Install.tsx  ProblemSolution.tsx  Stats.tsx  Tiers.tsx  data.ts  index.ts
web/src/i18n/: LanguageContext.tsx  types.ts
web/src/i18n/locales/: en.ts  it.ts
web/src/pages/: Docs.tsx  Home.tsx
